Release 1.1
===========
* merge :ghissue:`91` - add french translation
* merge :ghissue:`88` - Display required columns in byrows_update formset
* merge :ghissue:`87` - Add AdminSite.each_context() to templates context.
* merge :ghissue:`86` - Compilemessages failed for Spanish translation
* merge :ghissue:`83` - byrows_update action: adapt test_permissions to take into byrows update action.



Release 1.0
===========
* minor refactoring
* official support for django 1.4 to 1.9
* official support for python 2.7, 3.3, 3.5
* merge :ghissue:`77` - add initial form values for CSV export
* merge :ghissue:`76` - reuse xls style while iterating over cells
* merge :ghissue:`75` - allow streaming export to CSV response
* merge :ghissue:`73` - Fixing merge on DateTimeField with null=True
* support settings.ADMINACTIONS_CSV_OPTIONS_DEFAULT
* support streaming CSV file response
* new `upper` and `lower` modifiers available for EmailField in mass update.


Release 0.8.5
=============
* repackage due broken version in 0.8.4


Release 0.8.4
=============
* fixes :ghissue:`70` get_models return incorrect models in django 1.7+
* closes :ghissue:`71`


Release 0.8.3
=============
* bugfix: support both post_syncdb and post_migrate


Release 0.8.2
=============
* fixes #64: Export not working when actions enabled on top & bottom
* document #62: default of csv is not csv (thanks @oppianmatt)


Release 0.8.1
=============
* Use collections.OrderedDict instead for Django1.7 or higher. (thanks @rvoicilas)


Release 0.8
===========
* python 3.3, 3.4 compatibility
* add spanish translation (thanks @xangmuve)


Release 0.7
===========
* fixes issue in mass_update due wrong indentaion
* fixed :ghissue:`49`
* removed options to enable/disable transactions during mass_update.
* fixed :ghissue:`60`


Release 0.6
===========
* fixed :ghissue:`55`
* fixed :ghissue:`51`
* added selenium tests
* pulled out tests from main package and use of py.test
* removed demoproject (use `make demo` instead)

