@@ -248,7 +248,7 @@ def mass_update(modeladmin, request, queryset):  # noqa
                              updated=updated)
 
     opts = modeladmin.model._meta
-    perm = "{0}.{1}".format(opts.app_label.lower(), get_permission_codename('adminactions_massupdate', opts))
+    perm = "{0}.{1}".format(opts.app_label, get_permission_codename('adminactions_massupdate', opts))
     if not request.user.has_perm(perm):
         messages.error(request, _('Sorry you do not have rights to execute this action'))
         return
