@@ -5,6 +5,7 @@ Release 1.1
 * merge :ghissue:`87` - Add AdminSite.each_context() to templates context.
 * merge :ghissue:`86` - Compilemessages failed for Spanish translation
 * merge :ghissue:`83` - byrows_update action: adapt test_permissions to take into byrows update action.
+* merge :ghissue:`79` - Permissions don't work
 
 
 
